[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://tilemaps/player.tres" type="Texture" id=2]
[ext_resource path="res://tilemaps/gradient.png" type="Texture" id=3]
[ext_resource path="res://tilemaps/fh.png" type="Texture" id=4]
[ext_resource path="res://tilemaps/Ui.png" type="Texture" id=5]
[ext_resource path="res://tilemaps/eh.png" type="Texture" id=6]
[ext_resource path="res://UI.gd" type="Script" id=7]
[ext_resource path="res://tilemaps/player.png" type="Texture" id=8]
[ext_resource path="res://door-minigame/Item.gd" type="Script" id=9]

[sub_resource type="AtlasTexture" id=44]
flags = 2
atlas = ExtResource( 5 )
region = Rect2( 20, 5, 17, 17 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 3 )
region = Rect2( 11, 3, 10, 1 )

[sub_resource type="AtlasTexture" id=46]
flags = 2
atlas = ExtResource( 5 )
region = Rect2( 2, 5, 16, 17 )

[sub_resource type="AtlasTexture" id=47]
flags = 2
atlas = ExtResource( 5 )
region = Rect2( 82, 24, 17, 17 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 8 )
region = Rect2( 98, 1, 14, 31 )

[sub_resource type="RectangleShape2D" id=43]
extents = Vector2( 6, 11.25 )

[node name="Side-view player" type="KinematicBody2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2
offset = Vector2( 160, 90 )
transform = Transform2D( 1, 0, 0, 1, 160, 90 )

[node name="UI" type="Control" parent="CanvasLayer"]
script = ExtResource( 7 )

[node name="HeartsUIEmpty" type="TextureRect" parent="CanvasLayer/UI"]
margin_left = -153.0
margin_top = -86.0
margin_right = -105.0
margin_bottom = -70.0
texture = ExtResource( 6 )
stretch_mode = 2

[node name="HeartsUIFull" type="TextureRect" parent="CanvasLayer/UI"]
margin_left = -153.0
margin_top = -86.0
margin_right = -105.0
margin_bottom = -70.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 2

[node name="Pause" type="TextureButton" parent="CanvasLayer/UI"]
margin_left = 135.0
margin_top = -86.0
margin_right = 151.0
margin_bottom = -70.0
texture_normal = SubResource( 44 )
expand = true

[node name="Sprite" type="Sprite" parent="CanvasLayer/UI/Pause"]
position = Vector2( -136, 88 )
scale = Vector2( 33.6, 192 )
texture = SubResource( 45 )

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/UI/Pause"]
margin_left = -152.0
margin_top = 104.0
margin_right = -120.0
margin_bottom = 136.0
texture_normal = SubResource( 46 )
expand = true

[node name="Slot1" type="TextureRect" parent="CanvasLayer/UI"]
margin_left = 135.0
margin_top = 66.0
margin_right = 151.0
margin_bottom = 82.0
texture = SubResource( 47 )
expand = true

[node name="Icon" type="TextureRect" parent="CanvasLayer/UI/Slot1"]
margin_right = 16.0
margin_bottom = 16.0
texture = SubResource( 48 )
expand = true
stretch_mode = 6
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 6 )
shape = SubResource( 43 )

[connection signal="pressed" from="CanvasLayer/UI/Pause" to="CanvasLayer/UI" method="_on_Pause_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/Pause/TextureButton" to="CanvasLayer/UI" method="_on_TextureButton_pressed"]
